--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
   <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link rel="stylesheet" href="./assets/bootstrap/bootstrap.css" async /> -->
+    <title>Nina Carducci-Photographe Bordeaux</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
@@ -10,16 +12,10 @@
       crossorigin="anonymous"
       defer
     />
-    <!-- <link rel="stylesheet" href="./assets/style.css" /> -->
     <link rel="stylesheet" href="./assets/style.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <!-- <link
-      href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
-      rel="stylesheet"
-    /> -->
     <meta charset="UTF-8" />
-    <!-- <script src="./assets/bootstrap/bootstrap.bundle.js"></script> -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
@@ -32,7 +28,6 @@
       crossorigin="anonymous"
       defer
     ></script>
-    <!-- <script src="./assets/maugallery.js" defer></script> -->
     <script src="./assets/maugallery.min.js" defer></script>
     <script src="./assets/scripts.js" defer></script>
   </head>
@@ -50,7 +45,11 @@
               class="social-link"
               href="https://www.instagram.com/ninacarducci.photo/?hl=fr"
               target="_blank"
-              ><img src="assets/images/instagram.webp" alt="icone instagram"
+              ><img
+                src="assets/images/instagram.webp"
+                alt="icone instagram"
+                width="20"
+                height="20"
             /></a>
           </li>
         </ul>
@@ -89,21 +88,27 @@
             <img
               src="./assets/images/slider/ryoji-iwata.webp"
               class="d-block w-100"
-              alt="..."
+              width="1903"
+              height="880"
+              alt="Homme en costume marchant sur un passage pieton dominance de couleur noir et blanc"
             />
           </div>
           <div class="carousel-item">
             <img
               src="./assets/images/slider/nicholas-green.webp"
               class="d-block w-100"
-              alt="..."
+              width="1903"
+              height="880"
+              alt="Photo d'un publique de jeunes adultes a un concert, les personnes au 1er plan ont les bras levé"
             />
           </div>
           <div class="carousel-item">
             <img
               src="./assets/images/slider/edward-cisneros.webp"
               class="d-block w-100"
-              alt="..."
+              width="1903"
+              height="880"
+              alt="Photo d'un couple marié s'embrassant entouré de leurs invité qui applaudisse au mariage"
             />
           </div>
         </div>
@@ -129,7 +134,12 @@
     </div>
     <div id="about">
       <div class="picture left">
-        <img src="./assets/images/nina.webp" alt="Photo profile Nina" />
+        <img
+          src="./assets/images/nina.webp"
+          width="555"
+          height="553"
+          alt="Photo profile Nina Carducci photographe de Bordeaux"
+        />
       </div>
       <div id="about-me">
         <h3 class="about-me__title">A propos de moi</h3>
@@ -158,46 +168,55 @@
             data-gallery-tag="Concert"
             class="gallery-item"
             src="./assets/images/gallery/concerts/aaron-paul-concert.webp"
+            alt="photo prise en tant que spectateur a un concert, ambiance rouge orangé du aux lumieres de la scène"
           />
           <img
             data-gallery-tag="Entreprises"
             class="gallery-item"
             src="./assets/images/gallery/entreprise/ali-morshedlou-entreprise.webp"
+            alt="photo d'un homme en costume les bras croisés"
           />
           <img
             data-gallery-tag="Entreprises"
             class="gallery-item"
             src="./assets/images/gallery/entreprise/jason-goodman-entreprise.webp"
+            alt="Photo de collgues de travaille, la personne souris habillé de bleu, au 1er plan flou et personne de dos"
           />
           <img
             data-gallery-tag="Mariages"
             class="gallery-item"
             src="./assets/images/gallery/mariage/hannah-busing-mariage.webp"
+            alt="photo de main d'un couple marié, a gauche les mains de l'homme qui tienne du bout des doigts les mains de sa femme. "
           />
           <img
             data-gallery-tag="Portrait"
             class="gallery-item"
             src="./assets/images/gallery/portraits/ade-tunji-portrait.webp"
+            alt="photo d'un visage d'homme en gros plan vetu de noir, les yeux fermés"
           />
           <img
             data-gallery-tag="Mariages"
             class="gallery-item"
             src="./assets/images/gallery/mariage/jakob-owens-mariage.webp"
+            alt="Photo d'un couple marié en tenu de marié se donnant la main et se souriant, palmier en arriere plan"
           />
           <img
             data-gallery-tag="Portrait"
             class="gallery-item"
             src="./assets/images/gallery/portraits/nino-van-prattenburg-portrait.webp"
+            alt="jeune fille en gros plan avec des lunettes et se tenant les cheveux vétu de noir"
           />
           <img
             data-gallery-tag="Concert"
             class="gallery-item"
             src="./assets/images/gallery/concerts/austin-neill-concert.webp"
+            alt="photo de l'artiste micro dans une main et l'autre en l'air, fumé blanche et rouge en fond"
           />
           <img
             data-gallery-tag="Entreprises"
             class="gallery-item"
             src="./assets/images/gallery/entreprise/mateus-campos-felipe-entreprise.webp"
+            alt="photo d'une employé sur un ordinateur portable qui rit vetu d'un haut noir a poid blanc"
           />
         </div>
       </div>
@@ -280,11 +299,11 @@
             N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures
           </p>
           <form action="" method="post">
-            <label>Nom</label>
+            <label for="Nom">Nom</label>
             <input type="text" name="nom" id="nom" />
-            <label>Email</label>
+            <label for="Email">Email</label>
             <input type="email" name="email" id="email" />
-            <label>Message</label>
+            <label for="Message">Message</label>
             <textarea
               name="message"
               id="message"
@@ -295,7 +314,12 @@
           </form>
         </div>
         <div class="picture right">
-          <img src="./assets/images/camera.webp" />
+          <img
+            src="./assets/images/camera.webp"
+            width="419"
+            height="418"
+            alt="appareil photo"
+          />
         </div>
       </div>
     </div>
