Changement h1,h2,h3 etc + style refait

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       crossorigin="anonymous"
       defer
     />
+    <!-- test  -->
+    <!-- <link rel="stylesheet" href="./assets/style.css" /> -->
     <link rel="stylesheet" href="./assets/style.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -33,7 +35,8 @@
   </head>
   <body>
     <div class="top-header">
-      <h3 class="name">Nina Carducci</h3>
+      <h1 class="name">Nina Carducci</h1>
+      <!-- <h3 class="name">Nina Carducci</h3> -->
       <div class="nav">
         <ul>
           <li><a href="#about">À propos</a></li>
@@ -142,12 +145,14 @@
         />
       </div>
       <div id="about-me">
-        <h3 class="about-me__title">A propos de moi</h3>
-        <h6 class="about-me__introduction">
+        <h2 class="about-me__title">A propos de moi</h2>
+        <!-- <h3 class="about-me__title">A propos de moi</h3> -->
+        <h3 class="about-me__introduction">
+          <!-- <h6 class="about-me__introduction"> </h6> -->
           Devenir photographe était pour moi une évidence. Comme si j’y étais
           prédestiné. Saisir un moment, une émotion, une situation, un endroit,
           une lumière et les rendre immortels, voilà ce qui me fait vibrer.
-        </h6>
+        </h3>
         <p>
           Nous passons notre vie à chercher le bonheur, et lorsque nous y
           touchons, nous n’avons qu’une envie : le figer au travers de
@@ -161,7 +166,8 @@
       </div>
     </div>
     <div id="gallery">
-      <h3 class="title">Portfolio</h3>
+      <h2 class="title">Portfolio</h2>
+      <!-- <h3 class="title">Portfolio</h3> -->
       <div class="container py-3">
         <div class="gallery" style="display: none">
           <img
@@ -223,23 +229,26 @@
       <div class="quote">
         <figure>
           <blockquote>
-            <h1 class="quote__text">
+            <h4 class="quote__text">
+              <!-- <h1 class="quote__text"></h1> -->
               Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou
               qu’un fait est traduit en photo, il cesse d’être un fait pour
               devenir une opinion. L’inexactitude n’existe pas en photographie.
               Toutes les photos sont exactes. Aucune d’elles n’est la vérité.
-            </h1>
+            </h4>
           </blockquote>
           <figcaption class="quote__author">- Richard Avedon</figcaption>
         </figure>
       </div>
     </div>
     <div id="services">
-      <h3 class="title">Mes services</h3>
+      <h2 class="title">Mes services</h2>
+      <!-- <h3 class="title">Mes services</h3> -->
       <div class="container">
         <div class="service">
           <div class="service__description">
-            <h3>Shooting photo</h3>
+            <h2>Shooting photo</h2>
+            <!-- <h3>Shooting photo</h3> -->
             <p>
               Pour capturer vos moments les plus précieux et garder un souvenir
               impérissable. Je me déplace en Île-de-France pour réaliser vos
@@ -247,33 +256,38 @@
             </p>
           </div>
           <div class="service__price">
-            <h4>350€/demi journée</h4>
+            <h5>350€/demi journée</h5>
+            <!-- <h4>350€/demi journée</h4> -->
             <span>Matériel, déplacement inclus</span>
           </div>
         </div>
         <div class="service">
           <div class="service__description">
-            <h3>Retouches</h3>
+            <h2>Retouches</h2>
+            <!-- <h3>Retouches</h3> -->
             <p>
               Vous souhaitez retoucher vos photos pour un résultat professionnel
               ? Bénéficier d’un rendu optimal pour vos publications
             </p>
           </div>
           <div class="service__price">
-            <h4>50€/photo</h4>
+            <h5>50€/photo</h5>
+            <!-- <h4>50€/photo</h4> -->
             <span>2 AR par photo</span>
           </div>
         </div>
         <div class="service">
           <div class="service__description">
-            <h3>Album photos</h3>
+            <h2>Album photos</h2>
+            <!-- <h3>Album photos</h3> -->
             <p>
               Partagez avec vos proches et vos clients les photos des moments
               partagés ensemble à travers un album photo personnalisé
             </p>
           </div>
           <div class="service__price">
-            <h4>400€ album A4</h4>
+            <h5>400€ album A4</h5>
+            <!-- <h4>400€ album A4</h4> -->
             <span>30 pages recto/verso</span>
           </div>
         </div>
@@ -282,11 +296,12 @@
     <div class="quote">
       <figure>
         <blockquote>
-          <h1 class="quote__text">
+          <h6 class="quote__text">
+            <!-- <h1 class="quote__text"></h1> -->
             De manière inconsciente, je crois, je guette un regard, une
             expression, des traits ou une nostalgie capable de résumer ou plus
             exactement de révéler une vie
-          </h1>
+          </h6>
         </blockquote>
         <figcaption class="quote__author">- Richard Avedon</figcaption>
       </figure>
@@ -300,12 +315,23 @@
           </p>
           <form action="" method="post">
             <label for="Nom">Nom</label>
-            <input type="text" name="nom" id="nom" />
+            <input
+              type="text"
+              placeholder="Taper votre nom"
+              name="nom"
+              id="nom"
+            />
             <label for="Email">Email</label>
-            <input type="email" name="email" id="email" />
+            <input
+              type="email"
+              placeholder="Taper votre Email"
+              name="email"
+              id="email"
+            />
             <label for="Message">Message</label>
             <textarea
               name="message"
+              placeholder="Taper votre message"
               id="message"
               cols="30"
               rows="10"
