--- a/index.html
+++ b/index.html
@@ -5,6 +5,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nina Carducci-Photographe Bordeaux</title>
+
+    <meta
+      name="description"
+      content="Nina Carducci, photographe installé sur Bordeaux pour la réalisation de vos shooting, album photos ou retouches photo"
+    />
+
+    <!-- Open Graph meta -->
+
+    <meta
+      property="og:title"
+      content="Nina Carducci, photographe installé sur Bordeaux pour la réalisation de vos shooting, album photos ou retouches photo"
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://henrymickael.github.io/nina-carducci.github.io/"
+    />
+    <meta
+      property="og:image"
+      content="https://henrymickael.github.io/nina-carducci.github.io/assets/images/nina.webp"
+    />
+    <meta
+      property="og:description"
+      content="Nina Carducci, photographe installé sur Bordeaux pour la réalisation de vos shooting, album photos ou retouches photo"
+    />
+
+    <!-- Twitter-->
+    <meta
+      name="twitter:card"
+      content="Nina Carducci, photographe installé sur Bordeaux pour la réalisation de vos shooting, album photos ou retouches photo"
+    />
+    <meta
+      name="twitter:title"
+      content="Nina Carducci, photographe installé sur Bordeaux pour la réalisation de vos shooting, album photos ou retouches photo"
+    />
+    <meta
+      name="twitter:description"
+      content="Nina Carducci, photographe installé sur Bordeaux pour la réalisation de vos shooting, album photos ou retouches photo"
+    />
+    <meta name="twitter:creator" content="@NinaCarducci" />
+
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
@@ -13,8 +54,8 @@
       defer
     />
     <!-- test  -->
-    <!-- <link rel="stylesheet" href="./assets/style.css" /> -->
-    <link rel="stylesheet" href="./assets/style.min.css" />
+    <link rel="stylesheet" href="./assets/style.css" />
+    <!-- <link rel="stylesheet" href="./assets/style.min.css" /> -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <meta charset="UTF-8" />
@@ -36,7 +77,6 @@
   <body>
     <div class="top-header">
       <h1 class="name">Nina Carducci</h1>
-      <!-- <h3 class="name">Nina Carducci</h3> -->
       <div class="nav">
         <ul>
           <li><a href="#about">À propos</a></li>
@@ -146,9 +186,7 @@
       </div>
       <div id="about-me">
         <h2 class="about-me__title">A propos de moi</h2>
-        <!-- <h3 class="about-me__title">A propos de moi</h3> -->
         <h3 class="about-me__introduction">
-          <!-- <h6 class="about-me__introduction"> </h6> -->
           Devenir photographe était pour moi une évidence. Comme si j’y étais
           prédestiné. Saisir un moment, une émotion, une situation, un endroit,
           une lumière et les rendre immortels, voilà ce qui me fait vibrer.
@@ -167,7 +205,6 @@
     </div>
     <div id="gallery">
       <h2 class="title">Portfolio</h2>
-      <!-- <h3 class="title">Portfolio</h3> -->
       <div class="container py-3">
         <div class="gallery" style="display: none">
           <img
@@ -186,13 +223,13 @@
             data-gallery-tag="Entreprises"
             class="gallery-item"
             src="./assets/images/gallery/entreprise/jason-goodman-entreprise.webp"
-            alt="Photo de collgues de travaille, la personne souris habillé de bleu, au 1er plan flou et personne de dos"
+            alt="Photo de collègues de travaille, personne souriante"
           />
           <img
             data-gallery-tag="Mariages"
             class="gallery-item"
             src="./assets/images/gallery/mariage/hannah-busing-mariage.webp"
-            alt="photo de main d'un couple marié, a gauche les mains de l'homme qui tienne du bout des doigts les mains de sa femme. "
+            alt="photo de main d'un couple marié avec leurs alliances "
           />
           <img
             data-gallery-tag="Portrait"
@@ -229,13 +266,12 @@
       <div class="quote">
         <figure>
           <blockquote>
-            <h4 class="quote__text">
-              <!-- <h1 class="quote__text"></h1> -->
+            <h3 class="quote__text">
               Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou
               qu’un fait est traduit en photo, il cesse d’être un fait pour
               devenir une opinion. L’inexactitude n’existe pas en photographie.
               Toutes les photos sont exactes. Aucune d’elles n’est la vérité.
-            </h4>
+            </h3>
           </blockquote>
           <figcaption class="quote__author">- Richard Avedon</figcaption>
         </figure>
@@ -243,12 +279,10 @@
     </div>
     <div id="services">
       <h2 class="title">Mes services</h2>
-      <!-- <h3 class="title">Mes services</h3> -->
       <div class="container">
         <div class="service">
           <div class="service__description">
             <h2>Shooting photo</h2>
-            <!-- <h3>Shooting photo</h3> -->
             <p>
               Pour capturer vos moments les plus précieux et garder un souvenir
               impérissable. Je me déplace en Île-de-France pour réaliser vos
@@ -256,38 +290,33 @@
             </p>
           </div>
           <div class="service__price">
-            <h5>350€/demi journée</h5>
-            <!-- <h4>350€/demi journée</h4> -->
+            <h3>350€/demi journée</h3>
             <span>Matériel, déplacement inclus</span>
           </div>
         </div>
         <div class="service">
           <div class="service__description">
             <h2>Retouches</h2>
-            <!-- <h3>Retouches</h3> -->
             <p>
               Vous souhaitez retoucher vos photos pour un résultat professionnel
               ? Bénéficier d’un rendu optimal pour vos publications
             </p>
           </div>
           <div class="service__price">
-            <h5>50€/photo</h5>
-            <!-- <h4>50€/photo</h4> -->
+            <h3>50€/photo</h3>
             <span>2 AR par photo</span>
           </div>
         </div>
         <div class="service">
           <div class="service__description">
             <h2>Album photos</h2>
-            <!-- <h3>Album photos</h3> -->
             <p>
               Partagez avec vos proches et vos clients les photos des moments
               partagés ensemble à travers un album photo personnalisé
             </p>
           </div>
           <div class="service__price">
-            <h5>400€ album A4</h5>
-            <!-- <h4>400€ album A4</h4> -->
+            <h3>400€ album A4</h3>
             <span>30 pages recto/verso</span>
           </div>
         </div>
@@ -296,12 +325,11 @@
     <div class="quote">
       <figure>
         <blockquote>
-          <h6 class="quote__text">
-            <!-- <h1 class="quote__text"></h1> -->
+          <h3 class="quote__text">
             De manière inconsciente, je crois, je guette un regard, une
             expression, des traits ou une nostalgie capable de résumer ou plus
             exactement de révéler une vie
-          </h6>
+          </h3>
         </blockquote>
         <figcaption class="quote__author">- Richard Avedon</figcaption>
       </figure>
@@ -314,21 +342,21 @@
             N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures
           </p>
           <form action="" method="post">
-            <label for="Nom">Nom</label>
+            <label for="nom">Nom</label>
             <input
               type="text"
               placeholder="Taper votre nom"
               name="nom"
               id="nom"
             />
-            <label for="Email">Email</label>
+            <label for="email">Email</label>
             <input
               type="email"
               placeholder="Taper votre Email"
               name="email"
               id="email"
             />
-            <label for="Message">Message</label>
+            <label for="message">Message</label>
             <textarea
               name="message"
               placeholder="Taper votre message"
@@ -349,5 +377,22 @@
         </div>
       </div>
     </div>
+    <footer
+      itemscope
+      itemtype="https://schema.org/LocalBusiness"
+      class="description"
+    >
+      <h3>Coordonées :</h3>
+      <p itemprop="name">Nina Carducci, Photographe à Bordeaux</p>
+      <p itemprop="address">
+        Adresse : 68 avenue Alsace-Lorraine, 33200 Bordeaux
+      </p>
+      <p itemprop="telephone" content="+33556677889">
+        Télephone : 05 56 67 78 89
+      </p>
+      <p itemprop="openingHours" content="Mo,Tu,We,Th,Fr 10:00-19:00">
+        Horaire de réponse : Du Lundi au vendredi de 10h à 19h
+      </p>
+    </footer>
   </body>
 </html>
