--- a/index.html
+++ b/index.html
@@ -3,16 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Nina Carducci-Photographe Bordeaux</title>
-
     <meta
       name="description"
       content="Nina Carducci, photographe installé sur Bordeaux pour la réalisation de vos shooting, album photos ou retouches photo"
     />
-
-    <!-- Open Graph meta -->
-
     <meta
       property="og:title"
       content="Nina Carducci, photographe installé sur Bordeaux pour la réalisation de vos shooting, album photos ou retouches photo"
@@ -30,8 +26,6 @@
       property="og:description"
       content="Nina Carducci, photographe installé sur Bordeaux pour la réalisation de vos shooting, album photos ou retouches photo"
     />
-
-    <!-- Twitter-->
     <meta
       name="twitter:card"
       content="Nina Carducci, photographe installé sur Bordeaux pour la réalisation de vos shooting, album photos ou retouches photo"
@@ -45,17 +39,14 @@
       content="Nina Carducci, photographe installé sur Bordeaux pour la réalisation de vos shooting, album photos ou retouches photo"
     />
     <meta name="twitter:creator" content="@NinaCarducci" />
-
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
-      defer
+      defer="defer"
     />
-    <!-- test  -->
-    <link rel="stylesheet" href="./assets/style.css" />
-    <!-- <link rel="stylesheet" href="./assets/style.min.css" /> -->
+    <link rel="stylesheet" href="./assets/style.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <meta charset="UTF-8" />
@@ -63,16 +54,16 @@
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"
-      defer
+      defer="defer"
     ></script>
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
       crossorigin="anonymous"
-      defer
+      defer="defer"
     ></script>
-    <script src="./assets/maugallery.min.js" defer></script>
-    <script src="./assets/scripts.js" defer></script>
+    <script src="./assets/maugallery.min.js" defer="defer"></script>
+    <script src="./assets/scripts.js" defer="defer"></script>
   </head>
   <body>
     <div class="top-header">
@@ -112,14 +103,14 @@
             class="active"
             aria-current="true"
             aria-label="Slide 1"
-          ></button>
-          <button
+          ></button
+          ><button
             type="button"
             data-bs-target="#carouselExampleIndicators"
             data-bs-slide-to="1"
             aria-label="Slide 2"
-          ></button>
-          <button
+          ></button
+          ><button
             type="button"
             data-bs-target="#carouselExampleIndicators"
             data-bs-slide-to="2"
@@ -161,17 +152,16 @@
           data-bs-target="#carouselExampleIndicators"
           data-bs-slide="prev"
         >
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span
+          ><span class="visually-hidden">Previous</span></button
+        ><button
           class="carousel-control-next"
           type="button"
           data-bs-target="#carouselExampleIndicators"
           data-bs-slide="next"
         >
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
+          <span class="carousel-control-next-icon" aria-hidden="true"></span
+          ><span class="visually-hidden">Next</span>
         </button>
       </div>
     </div>
@@ -342,29 +332,27 @@
             N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures
           </p>
           <form action="" method="post">
-            <label for="nom">Nom</label>
-            <input
+            <label for="nom">Nom</label
+            ><input
               type="text"
               placeholder="Taper votre nom"
               name="nom"
               id="nom"
-            />
-            <label for="email">Email</label>
-            <input
+            /><label for="email">Email</label
+            ><input
               type="email"
               placeholder="Taper votre Email"
               name="email"
               id="email"
-            />
-            <label for="message">Message</label>
-            <textarea
+            /><label for="message">Message</label
+            ><textarea
               name="message"
               placeholder="Taper votre message"
               id="message"
               cols="30"
               rows="10"
-            ></textarea>
-            <input type="submit" value="Envoyer" />
+            ></textarea
+            ><input type="submit" value="Envoyer" />
           </form>
         </div>
         <div class="picture right">
@@ -382,17 +370,28 @@
       itemtype="https://schema.org/LocalBusiness"
       class="description"
     >
-      <h3>Coordonées :</h3>
-      <p itemprop="name">Nina Carducci, Photographe à Bordeaux</p>
-      <p itemprop="address">
-        Adresse : 68 avenue Alsace-Lorraine, 33200 Bordeaux
-      </p>
-      <p itemprop="telephone" content="+33556677889">
-        Télephone : 05 56 67 78 89
-      </p>
-      <p itemprop="openingHours" content="Mo,Tu,We,Th,Fr 10:00-19:00">
-        Horaire de réponse : Du Lundi au vendredi de 10h à 19h
-      </p>
+      <div>
+        <img
+          itemprop="image"
+          width="225"
+          height="220"
+          src="./assets/images/nina.webp"
+          alt="Nina Carducci, Photographe Bordeaux"
+        />
+      </div>
+      <div>
+        <h3>Coordonées :</h3>
+        <p itemprop="name">Nina Carducci, Photographe à Bordeaux</p>
+        <p itemprop="address">
+          Adresse : 68 avenue Alsace-Lorraine, 33200 Bordeaux
+        </p>
+        <p itemprop="telephone" content="+33556677889">
+          Télephone : 05 56 67 78 89
+        </p>
+        <p itemprop="openingHours" content="Mo,Tu,We,Th,Fr 10:00-19:00">
+          Horaire de réponse : Du Lundi au vendredi de 10h à 19h
+        </p>
+      </div>
     </footer>
   </body>
 </html>
