Ajout balise meta google search console

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Nina Carducci-Photographe Bordeaux</title>
     <meta
+      name="google-site-verification"
+      content="cXQWdOcl6U_HEbqGWm6eUeVEzgRLBS5xd-EQhb4QSoU"
+    />
+    <meta
       name="description"
       content="Nina Carducci, photographe installé sur Bordeaux pour la réalisation de vos shooting, album photos ou retouches photo"
     />
