--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     />
     <meta
       name="description"
-      content="Nina Carducci, photographe installé sur Bordeaux pour la réalisation de vos shooting, album photos ou retouches photo"
+      content="Nina Carducci, photographe installée sur Bordeaux pour la réalisation de vos shooting, album photos ou retouches photo"
     />
     <meta
       property="og:title"
-      content="Nina Carducci, photographe installé sur Bordeaux pour la réalisation de vos shooting, album photos ou retouches photo"
+      content="Nina Carducci, photographe installée sur Bordeaux pour la réalisation de vos shooting, album photos ou retouches photo"
     />
     <meta property="og:type" content="website" />
     <meta
@@ -28,19 +28,19 @@
     />
     <meta
       property="og:description"
-      content="Nina Carducci, photographe installé sur Bordeaux pour la réalisation de vos shooting, album photos ou retouches photo"
+      content="Nina Carducci, photographe installée sur Bordeaux pour la réalisation de vos shooting, album photos ou retouches photo"
     />
     <meta
       name="twitter:card"
-      content="Nina Carducci, photographe installé sur Bordeaux pour la réalisation de vos shooting, album photos ou retouches photo"
+      content="Nina Carducci, photographe installée sur Bordeaux pour la réalisation de vos shooting, album photos ou retouches photo"
     />
     <meta
       name="twitter:title"
-      content="Nina Carducci, photographe installé sur Bordeaux pour la réalisation de vos shooting, album photos ou retouches photo"
+      content="Nina Carducci, photographe installée sur Bordeaux pour la réalisation de vos shooting, album photos ou retouches photo"
     />
     <meta
       name="twitter:description"
-      content="Nina Carducci, photographe installé sur Bordeaux pour la réalisation de vos shooting, album photos ou retouches photo"
+      content="Nina Carducci, photographe installée sur Bordeaux pour la réalisation de vos shooting, album photos ou retouches photo"
     />
     <meta name="twitter:creator" content="@NinaCarducci" />
     <link
